feat: 매장 DB 조회 및 상세 API 구현 (#3)