@@ -2,125 +2,108 @@ package PickitPickit.store.service;
 
 import PickitPickit.global.exception.ApiException;
 import PickitPickit.global.response.ErrorStatus;
-import PickitPickit.store.client.KakaoKeywordResponse;
-import PickitPickit.store.client.KakaoLocalClient;
+import PickitPickit.store.domain.Store;
+import PickitPickit.store.dto.StoreDetailResponse;
 import PickitPickit.store.dto.StoreResponse;
 import PickitPickit.store.dto.StoreType;
+import PickitPickit.store.repository.StoreProductRepository;
+import PickitPickit.store.repository.StoreRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.math.BigDecimal;
+import java.util.List;
+import java.util.Set;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class StoreServiceImpl implements StoreService {
 
     private static final Set<Integer> ALLOWED_RADIUS = Set.of(500, 1000, 3000, 5000);
 
-    /** 카카오 키워드 - 인형뽑기 */
-    private static final String KEYWORD_CLAW = "인형뽑기";
+    /**
+     * 위도 1도 ≈ 111,320m → 바운딩 박스 계산에 사용
+     */
+    private static final double METERS_PER_DEGREE_LAT = 111_320.0;
 
-    /** 카카오 키워드 - 가챠샵 */
-    private static final String KEYWORD_GACHA = "가챠샵";
-
-    private final KakaoLocalClient kakaoLocalClient;
+    private final StoreRepository storeRepository;
+    private final StoreProductRepository storeProductRepository;
 
     @Override
     public List<StoreResponse> getNearbyStores(double latitude, double longitude,
-                                               int radiusMeters, StoreType type) {
-        // 허용된 반경 값인지 검증
+                                                int radiusMeters, StoreType type) {
         if (!ALLOWED_RADIUS.contains(radiusMeters)) {
             throw new ApiException(ErrorStatus.INVALID_RADIUS);
         }
 
-        // 매장 유형에 따라 키워드 결정
-        List<String> keywords = switch (type) {
-            case CLAW  -> List.of(KEYWORD_CLAW);
-            case GACHA -> List.of(KEYWORD_GACHA);
-            case ALL   -> List.of(KEYWORD_CLAW, KEYWORD_GACHA);
-        };
+        // 바운딩 박스 계산 (인덱스 활용을 위한 사전 필터)
+        BigDecimal deltaLat = BigDecimal.valueOf(radiusMeters / METERS_PER_DEGREE_LAT);
+        double metersPerDegreeLng = METERS_PER_DEGREE_LAT * Math.cos(Math.toRadians(latitude));
+        BigDecimal deltaLng = BigDecimal.valueOf(radiusMeters / metersPerDegreeLng);
 
-        // 키워드별 검색 후 placeId 기준으로 중복 제거
-        Map<String, StoreResponse> deduped = new LinkedHashMap<>();
+        BigDecimal lat = BigDecimal.valueOf(latitude);
+        BigDecimal lng = BigDecimal.valueOf(longitude);
 
-        for (String keyword : keywords) {
-            StoreType assignedType = KEYWORD_GACHA.equals(keyword) ? StoreType.GACHA : StoreType.CLAW;
-            List<StoreResponse> results = fetchAll(keyword, latitude, longitude, radiusMeters, assignedType);
-            for (StoreResponse store : results) {
-                deduped.putIfAbsent(store.getPlaceId(), store);
-            }
+        BigDecimal minLat = lat.subtract(deltaLat);
+        BigDecimal maxLat = lat.add(deltaLat);
+        BigDecimal minLng = lng.subtract(deltaLng);
+        BigDecimal maxLng = lng.add(deltaLng);
+
+        // ALL이면 storeType = null → 전체 조회
+        String storeTypeStr = (type == StoreType.ALL) ? null : type.name();
+
+        List<Store> stores = storeRepository.findNearbyStores(
+                latitude, longitude, minLat, maxLat, minLng, maxLng, storeTypeStr, radiusMeters
+        );
+
+        return stores.stream()
+                .map(store -> {
+                    int distance = calculateDistance(latitude, longitude,
+                            store.getLatitude().doubleValue(), store.getLongitude().doubleValue());
+                    return StoreResponse.from(store, distance);
+                })
+                .toList();
+    }
+
+    @Override
+    public StoreDetailResponse getStoreDetail(Long storeId, Double userLat, Double userLng) {
+        Store store = storeRepository.findById(storeId)
+                .orElseThrow(() -> new ApiException(ErrorStatus.NOT_FOUND, "매장을 찾을 수 없습니다."));
+
+        int distance = 0;
+        if (userLat != null && userLng != null) {
+            distance = calculateDistance(userLat, userLng,
+                    store.getLatitude().doubleValue(), store.getLongitude().doubleValue());
         }
 
-        // 거리 오름차순 정렬
-        return deduped.values().stream()
-                .sorted(Comparator.comparingInt(StoreResponse::getDistance))
-                .collect(Collectors.toList());
+        StoreResponse storeResponse = StoreResponse.from(store, distance);
+
+        List<StoreDetailResponse.ProductInfo> products = storeProductRepository.findAllByStoreId(storeId)
+                .stream()
+                .map(StoreDetailResponse.ProductInfo::from)
+                .toList();
+
+        return new StoreDetailResponse(storeResponse, products);
     }
 
     /**
-     * 카카오 API 페이지네이션을 통해 모든 결과를 수집
+     * Haversine 공식으로 두 좌표 간 거리 계산 (미터 단위)
      */
-    private List<StoreResponse> fetchAll(String keyword, double latitude, double longitude,
-                                         int radiusMeters, StoreType type) {
-        List<StoreResponse> result = new ArrayList<>();
-        int page = 1;
+    private int calculateDistance(double lat1, double lng1, double lat2, double lng2) {
+        double earthRadius = 6_371_000; // 지구 반지름 (m)
 
-        while (true) {
-            KakaoKeywordResponse response =
-                    kakaoLocalClient.searchByKeyword(keyword, latitude, longitude, radiusMeters, page);
+        double dLat = Math.toRadians(lat2 - lat1);
+        double dLng = Math.toRadians(lng2 - lng1);
 
-            if (response == null || response.getDocuments() == null || response.getDocuments().isEmpty()) {
-                break;
-            }
+        double a = Math.sin(dLat / 2) * Math.sin(dLat / 2)
+                + Math.cos(Math.toRadians(lat1)) * Math.cos(Math.toRadians(lat2))
+                * Math.sin(dLng / 2) * Math.sin(dLng / 2);
+        double c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
 
-            response.getDocuments().stream()
-                    .map(doc -> toStoreResponse(doc, type))
-                    .forEach(result::add);
-
-            // 마지막 페이지이거나 최대 45페이지 도달 시 중단
-            if (response.getMeta().isEnd() || page >= 45) {
-                break;
-            }
-            page++;
-        }
-
-        return result;
-    }
-
-    private StoreResponse toStoreResponse(KakaoKeywordResponse.Document doc, StoreType type) {
-        String address = (doc.getRoadAddressName() != null && !doc.getRoadAddressName().isBlank())
-                ? doc.getRoadAddressName()
-                : doc.getAddressName();
-
-        return StoreResponse.builder()
-                .placeId(doc.getId())
-                .name(doc.getPlaceName())
-                .type(type)
-                .latitude(parseDouble(doc.getY()))
-                .longitude(parseDouble(doc.getX()))
-                .distance(parseInt(doc.getDistance()))
-                .address(address)
-                .phone(doc.getPhone())
-                .kakaoDetailUrl(doc.getPlaceUrl())
-                .build();
-    }
-
-    private double parseDouble(String value) {
-        try {
-            return value != null ? Double.parseDouble(value) : 0.0;
-        } catch (NumberFormatException e) {
-            return 0.0;
-        }
-    }
-
-    private int parseInt(String value) {
-        try {
-            return value != null ? Integer.parseInt(value) : 0;
-        } catch (NumberFormatException e) {
-            return 0;
-        }
+        return (int) Math.round(earthRadius * c);
     }
 }
